manifests/minio/minio-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: minio-upload
  namespace: minio
spec:
  buffering:
    maxRequestBodyBytes: 0
    maxResponseBodyBytes: 0
