manifests/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: minio
  labels:
    app.kubernetes.io/name: minio
spec:
  type: ClusterIP
  ports:
  - name: api
    port: 9000
    targetPort: api
    protocol: TCP
  - name: console
    port: 9001
    targetPort: console
    protocol: TCP
  selector:
    app.kubernetes.io/name: minio
